Add markup for first section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <div class="header">
-            <h1 class="logo">Header Logo</h1>
+            <span class="logo">Header Logo</span>
 
             <div class="links">
                 <ul>
@@ -20,5 +20,14 @@
             </div>
         </div>
         
+        <div class="container top">
+            <div class="side-text">
+                <h1>This website is awesome</h1>
+                <p>This website has some subject that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button>Sign up</button>
+            </div>
+            <img src="#" alt="/">
+        </div>
+
     </body>
 </html>
