--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
 
     <body>
         <div class="header">
-            <span class="logo">Header Logo</span>
+            <div class="header-bar">
+                <span class="logo">Header Logo</span>
 
-            <div class="links">
-                <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
-                </ul>
+                <div class="links">
+                    <ul>
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        
-        <div class="container top">
-            <div class="side-text">
-                <h1>This website is awesome</h1>
-                <p>This website has some subject that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button>Sign up</button>
+            
+            <div class="header-content">
+                <div class="side-text">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subject that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button>Sign up</button>
+                </div>
+                <img src="#" alt="/">
             </div>
-            <img src="#" alt="/">
         </div>
 
         <div class="container middle">
