--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="header">
             <div class="header-bar">
-                <span class="logo">Header Logo</span>
+                <div class="logo">Header Logo</div>
 
                 <div class="links">
                     <ul>
