--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p>This website has some subject that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                     <button>Sign up</button>
                 </div>
-                <img src="#" alt="/">
+                <img src="https://images.unsplash.com/photo-1623290284976-c11a2bcf4674?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" alt="Asian-style roof">
             </div>
         </div>
 
