--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
             </div>
         </div>
 
-        <div class="signup">
+        <div class="signup-container">
             <div class="signup-box">
-                <p>Call to action! It's time!</p>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <div class="signup-text">
+                    <p class="call-to-action">Call to action! It's time!</p>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
                 <button class="signup-button">Sign up</button>
             </div>
         </div>
