--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
 
         <div class="quote-container">
             <div class="quote">
-                <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-                <p class="quote-name">-Thor, God of Thunder</p>
+                <p class="quote-text">"Be content with what you have;
+                    rejoice in the way things are.
+                    When you realize there is nothing lacking,
+                    the whole world belongs to you."</p>
+                <p class="quote-name">- Lao Tzu</p>
             </div>
         </div>
 
