--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <body>
         <div class="header">
             <div class="header-bar">
-                <div class="logo">Header Logo</div>
+                <div class="logo">teatime</div>
 
                 <div class="links">
                     <ul>
-                        <li><a href="#">header link one</a></li>
-                        <li><a href="#">header link two</a></li>
-                        <li><a href="#">header link three</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
             </div>
             
             <div class="header-content">
                 <div class="hero">
-                    <h1>This website is awesome</h1>
-                    <p>This website has some subject that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                    <button class="header-button">Sign up</button>
+                    <h1>Take a breather.</h1>
+                    <p>Please have a seat. Settle down with a nice, hot cup of tea and enjoy some soft pictures of Asia. </p>
+                    <button class="header-button">Gallery</button>
                 </div>
                 <div class="header-image">
                     <img src="https://images.unsplash.com/photo-1531970227416-f0cddeb1f748?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTU4fHxjaGluYXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="Asian tea setup">
