Update call to action description

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
         <div class="signup-container">
             <div class="signup-box">
                 <div class="signup-text">
-                    <p class="call-to-action">Call to action! It's time!</p>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <p class="call-to-action">Get notified when we add new photos!</p>
+                    <p>Subscribe to our newsletter to stay in the loop and be the first to see new additions to our gallery!</p>
                 </div>
-                <button class="signup-button">Sign up</button>
+                <button class="signup-button">Subscribe</button>
             </div>
         </div>
 
